# fastapi_2025

./: README.md  pyproject.toml
fastapi_2025/: .gitignore  app.py
tests/: conftest.py  test_app.py
